    1    input  Catch recursive include errors
    1    input  Implement fill with value .db directive
    1     devs  EEPROM read/write delays
    1      sim  API for warning on out of bound accesses flash and EEPROM
    1     devs  USART baud rates
    1     devs  USART frame sizes
    1  jintgen  DisassemblerGenerator: split fields that span word boundaries

----------------------------------- Completed -----------------------------------------
    2    radio  Detect receives of radio bytes and notify radio probes        1.7.100
    1     devs  SPI master transfer bug (should not transmit until SPDR set)  1.7.098
    1     arch  Architecture registry map not synchronized                    1.7.091
    1    synch  [Andreas Lachenmann] interval synchronizer patch              1.7.088
    1   eeprom  [Sascha Silbe] EEPROM support fixes                           1.7.086
    1      dev  SPIF flag in SPSR register                                    1.7.077
    1    input  Workaround for objdump 2.16.1 bug                             1.7.074
    1      gdb  Switched gdb monitor to use lowercase hex [Tim Auton]         1.7.073
    1      dev  Fixed problem with ADC conversion simulation                  1.7.072
    1      sim  Enable / Disable interrupts on write to SREG                  1.7.069
    1      sim  RAMPZ usage for with more than 128k of flash                  1.7.063
    1   energy  Energy monitor log                                            1.7.061
    1     devs  Check auto-unpost behavior of ADC interrupt                   1.7.060
    1      sim  ATMega128 sleep mode codes                                    1.7.056
    1    flash  Fixes to external flash implementation                        1.7.056
    1    input  Objdump fixes for binutils incompatibility                    1.7.056
    1      sim  Nullpointer in updateNodeID() when loading from ELF file      1.7.040
    1    input  Fixed processing of -sections option                          1.5.118